--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<body>
 		<header>
 			<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
-				<div class="container-fluid">
+				<div class="container-fluid mx-2 mx-xl-4">
 				<a class="navbar-brand" href="#">
 					<img src="./images/profile-img.WEBP" alt="Jen Patchett Logo Image" class="d-inline-block brand-logo-img">
       				Jen Patchett
