--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 				<h2 id="main-description">Web Developer & Software Automation Tester</h2>
 			</section>
 
+			
 			<!-- About Section with Carousel -->
 			<section id="about" class="row scroll-margin-top">
 
@@ -107,9 +108,10 @@
 					</div>
 			</section>
 			
+
 			<!-- Skills Section -->
 			<section id="skills" class="scroll-margin-top">
-				<h2>My Skills</h2>
+				<h2 class="heading-mb">My Skills</h2>
 			
 				<div class="card-group">
 					<div class="card">
@@ -117,23 +119,22 @@
 					<div class="card-body">
 						<h5 class="card-title">Card title</h5>
 						<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-						<p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
 					</div>
 					</div>
+					
 					<div class="card">
 					<img src="https://images.unsplash.com/photo-1548199973-03cce0bbc87b?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8cHVwcGllc3xlbnwwfHwwfHx8Mg%3D%3D" class="card-img-top" alt="...">
 					<div class="card-body">
 						<h5 class="card-title">Card title</h5>
 						<p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-						<p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
 					</div>
 					</div>
+
 					<div class="card">
 					<img src="https://images.unsplash.com/photo-1548199973-03cce0bbc87b?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8cHVwcGllc3xlbnwwfHwwfHx8Mg%3D%3D" class="card-img-top" alt="...">
 					<div class="card-body">
 						<h5 class="card-title">Card title</h5>
 						<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-						<p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
 					</div>
 					</div>
 				</div>
@@ -142,7 +143,7 @@
 
 			<!-- Projects Accordion -->
 			<section id="projects" class="accordion scroll-margin-top">
-				<h2>Projects</h2>
+				<h2 class="heading-mb">Projects</h2>
 				<div class="accordion-item">
 					<h3 class="accordion-header">
 						<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -187,6 +188,7 @@
 				</div>
 			</section>
 
+
 			<!-- Contact Section -->
 			<section id="contact" class="row scroll-margin-top">
 				<h2>Contact</h2>
@@ -227,11 +229,13 @@
 
 		</main>
 
+
 		<!-- Footer -->
 		<footer>
 			<p class="social-links">Find me on <a href="https://github.com/JenPatchett" target="_blank">GitHub</a>, <a href="https://codepen.io/jenpatchett/" target="_blank">CodePen</a> and <a href="https://www.linkedin.com/in/jenpatchett/" target="_blank">LinkedIn</a>.</p>
 			<p>Copyright &copy 2023 Jen Patchett. All rights reserved.</p>
 		</footer>
+
 
 		<!-- Bootstrap script for interactivity -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
